<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top"
        android:padding="16dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/select_avatar_type"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

    <RadioGroup
            android:id="@+id/spriteTypeGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/male"/>

        <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/female"/>

        <RadioButton
                android:id="@+id/randomRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:checked="true"
                android:text="@string/random"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextAppearance="@style/TextAppearance.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/type_seed"
                android:textCursorDrawable="@drawable/text_cursor_drawable"
                android:inputType="textShortMessage"
                android:lines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/generate"
            app:backgroundTint="@color/colorAccent"/>

</LinearLayout>